Highlight recent game results

--- a/index.html
+++ b/index.html
@@ -25,6 +25,79 @@
   </header>
 
   <main>
+    <section class="section section--focus" id="results">
+      <div class="section__header">
+        <p class="section__eyebrow">RESULT</p>
+        <h2>最新試合結果</h2>
+        <p>「どこといつ対戦して、スコアは何対何で、勝敗は？」をひと目でチェックできます。</p>
+      </div>
+      <div class="results">
+        <article class="result result--win">
+          <div class="result__meta">
+            <p class="result__date">2025.01.12</p>
+            <p class="result__label">TOKYO METRO LEAGUE</p>
+          </div>
+          <div class="result__score">
+            <div class="result__side">
+              <p class="result__team">Rampon BP</p>
+              <p class="result__point">82</p>
+            </div>
+            <span class="result__divider">−</span>
+            <div class="result__side">
+              <p class="result__team">TOKYO EDGE</p>
+              <p class="result__point">75</p>
+            </div>
+          </div>
+          <p class="result__summary">4Q 残り 2 分で 10−0 のランを作り、オフェンスリバウンドから主導権を奪取。</p>
+          <span class="result__badge">WIN</span>
+        </article>
+
+        <article class="result result--lose">
+          <div class="result__meta">
+            <p class="result__date">2024.12.20</p>
+            <p class="result__label">SHIBUYA CUP</p>
+          </div>
+          <div class="result__score">
+            <div class="result__side">
+              <p class="result__team">Rampon BP</p>
+              <p class="result__point">68</p>
+            </div>
+            <span class="result__divider">−</span>
+            <div class="result__side">
+              <p class="result__team">Shibuya Rookies</p>
+              <p class="result__point">72</p>
+            </div>
+          </div>
+          <p class="result__summary">終盤のターンオーバーが響き惜敗。守備のミスコミュニケーション見直しが課題。</p>
+          <span class="result__badge">LOSE</span>
+        </article>
+
+        <article class="result result--win">
+          <div class="result__meta">
+            <p class="result__date">2024.12.05</p>
+            <p class="result__label">YOKOHAMA FRIENDLY</p>
+          </div>
+          <div class="result__score">
+            <div class="result__side">
+              <p class="result__team">Rampon BP</p>
+              <p class="result__point">90</p>
+            </div>
+            <span class="result__divider">−</span>
+            <div class="result__side">
+              <p class="result__team">Yokohama Rise</p>
+              <p class="result__point">74</p>
+            </div>
+          </div>
+          <p class="result__summary">3P が 12/28 と高確率。セカンドユニットも二桁得点で層の厚さを示しました。</p>
+          <span class="result__badge">WIN</span>
+        </article>
+      </div>
+      <div class="results__cta">
+        <p>今季成績: 12 勝 4 敗｜首都圏リーグ 2 位</p>
+        <a class="btn btn--ghost" href="#schedule">次の試合をチェック</a>
+      </div>
+    </section>
+
     <section class="section" id="news">
       <div class="section__header">
         <p class="section__eyebrow">NEWS</p>
