--- a/index.html
+++ b/index.html
@@ -3,210 +3,86 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rampon Basketball Project</title>
-  <meta name="description" content="Rampon Basketball Project の公式ホームページ。最新ニュース、ゲームスケジュール、メンバー紹介などを掲載。">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <title>Rampon Basketball Project | Official</title>
+  <meta name="description" content="大学バスケットボールチーム Rampon Basketball Project の公式サイト。団体紹介、活動スケジュール、試合結果、ニュース、FAQ、問い合わせ情報を掲載。">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-  <header class="hero">
-    <div class="hero__overlay"></div>
-    <div class="hero__content">
-      <p class="hero__eyebrow">Rampon Basketball Project</p>
-      <h1>「走りきる」を合言葉に、<br>新しいバスケ体験を。</h1>
-      <p class="hero__lead">学生・社会人混合で活動するクラブチーム。プレーだけでなく、分析・広報・地域連携まで一体となって取り組みます。</p>
-      <div class="hero__actions">
-        <a class="btn btn--primary" href="#schedule">次のゲームを見る</a>
-        <a class="btn btn--ghost" href="#contact">メンバー応募</a>
-      </div>
-    </div>
+<body data-page="home">
+  <header class="site-header">
+    <nav class="navbar">
+      <a class="brand" href="index.html">Rampon Basketball</a>
+      <button class="nav-toggle" aria-label="メニューを開く">MENU</button>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="team.html">Team</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="games.html">Games</a></li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
+  <section class="hero">
+    <div class="wrapper">
+      <div class="hero-text">
+        <p class="hero-eyebrow">UNIVERSITY BASKETBALL TEAM</p>
+        <h1>走れる知性を武器に。<br>都市型クラブの新しい形。</h1>
+        <p>Rampon Basketball Project は、学生・社会人混成で活動する大学発クラブ。競技・学業・キャリアを両立しながら、首都圏の大学バスケをアップデートします。</p>
+        <div class="hero-actions">
+          <a class="btn btn-primary" href="schedule.html">練習/試合スケジュール</a>
+          <a class="btn btn-ghost" href="contact.html">見学・入部相談</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <main>
-    <section class="section section--focus" id="results">
-      <div class="section__header">
-        <p class="section__eyebrow">RESULT</p>
-        <h2>最新試合結果</h2>
-        <p>「どこといつ対戦して、スコアは何対何で、勝敗は？」をひと目でチェックできます。</p>
-      </div>
-      <div class="results">
-        <article class="result result--win">
-          <div class="result__meta">
-            <p class="result__date">2025.01.12</p>
-            <p class="result__label">TOKYO METRO LEAGUE</p>
-          </div>
-          <div class="result__score">
-            <div class="result__side">
-              <p class="result__team">Rampon BP</p>
-              <p class="result__point">82</p>
-            </div>
-            <span class="result__divider">−</span>
-            <div class="result__side">
-              <p class="result__team">TOKYO EDGE</p>
-              <p class="result__point">75</p>
-            </div>
-          </div>
-          <p class="result__summary">4Q 残り 2 分で 10−0 のランを作り、オフェンスリバウンドから主導権を奪取。</p>
-          <span class="result__badge">WIN</span>
-        </article>
-
-        <article class="result result--lose">
-          <div class="result__meta">
-            <p class="result__date">2024.12.20</p>
-            <p class="result__label">SHIBUYA CUP</p>
-          </div>
-          <div class="result__score">
-            <div class="result__side">
-              <p class="result__team">Rampon BP</p>
-              <p class="result__point">68</p>
-            </div>
-            <span class="result__divider">−</span>
-            <div class="result__side">
-              <p class="result__team">Shibuya Rookies</p>
-              <p class="result__point">72</p>
-            </div>
-          </div>
-          <p class="result__summary">終盤のターンオーバーが響き惜敗。守備のミスコミュニケーション見直しが課題。</p>
-          <span class="result__badge">LOSE</span>
-        </article>
-
-        <article class="result result--win">
-          <div class="result__meta">
-            <p class="result__date">2024.12.05</p>
-            <p class="result__label">YOKOHAMA FRIENDLY</p>
-          </div>
-          <div class="result__score">
-            <div class="result__side">
-              <p class="result__team">Rampon BP</p>
-              <p class="result__point">90</p>
-            </div>
-            <span class="result__divider">−</span>
-            <div class="result__side">
-              <p class="result__team">Yokohama Rise</p>
-              <p class="result__point">74</p>
-            </div>
-          </div>
-          <p class="result__summary">3P が 12/28 と高確率。セカンドユニットも二桁得点で層の厚さを示しました。</p>
-          <span class="result__badge">WIN</span>
-        </article>
-      </div>
-      <div class="results__cta">
-        <p>今季成績: 12 勝 4 敗｜首都圏リーグ 2 位</p>
-        <a class="btn btn--ghost" href="#schedule">次の試合をチェック</a>
-      </div>
-    </section>
-
-    <section class="section" id="news">
-      <div class="section__header">
-        <p class="section__eyebrow">NEWS</p>
-        <h2>最新ニュース</h2>
-        <p>活動レポートやイベント情報をお届けします。</p>
-      </div>
-      <div class="cards">
-        <article class="card">
-          <p class="card__date">2025.01.20</p>
-          <h3>春季トライアウト開催決定</h3>
-          <p>3 月に新メンバー向けのトライアウトを実施します。ポジション不問、サポートスタッフも募集中です。</p>
-        </article>
-        <article class="card">
-          <p class="card__date">2025.01.05</p>
-          <h3>テック分析班が始動</h3>
-          <p>データ分析を担当する学生チームが立ち上がりました。ゲームごとのスタッツ可視化を行い戦術に活かします。</p>
-        </article>
-        <article class="card">
-          <p class="card__date">2024.12.10</p>
-          <h3>地域クリニックをサポート</h3>
-          <p>港区ミニバス連盟と協力し、初心者向けスキルクリニックを開催。参加者 40 名がフロアを駆け回りました。</p>
-        </article>
-      </div>
-    </section>
-
-    <section class="section section--accent" id="schedule">
-      <div class="section__header">
-        <p class="section__eyebrow">SCHEDULE</p>
-        <h2>ゲーム／イベント予定</h2>
-      </div>
-      <div class="schedule">
-        <div class="schedule__item">
-          <p class="schedule__date">2.09 SUN</p>
-          <div>
-            <h3>vs TOKYO EDGE</h3>
-            <p>豊洲アリーナ｜Tip-off 18:30</p>
-          </div>
-          <span class="badge badge--open">一般公開</span>
+    <div class="wrapper">
+      <section class="section">
+        <div class="section-header">
+          <p class="section-eyebrow">RESULT</p>
+          <h2>直近の試合結果</h2>
+          <p>Games データから自動で最新3件を掲載。詳細ページでレポートを確認できます。</p>
         </div>
-        <div class="schedule__item">
-          <p class="schedule__date">2.16 SUN</p>
-          <div>
-            <h3>COMMUNITY PRACTICE</h3>
-            <p>渋谷スポーツセンター｜10:00-13:00</p>
-          </div>
-          <span class="badge">メンバー限定</span>
-        </div>
-        <div class="schedule__item">
-          <p class="schedule__date">3.02 SUN</p>
-          <div>
-            <h3>SPRING TRYOUT</h3>
-            <p>品川区総合体育館｜13:00-17:00</p>
-          </div>
-          <span class="badge badge--open">参加者募集</span>
-        </div>
-      </div>
-    </section>
+        <div id="latest-games" class="games-list"></div>
+        <p><a href="games.html">全試合をみる →</a></p>
+      </section>
 
-    <section class="section" id="team">
-      <div class="section__header">
-        <p class="section__eyebrow">TEAM</p>
-        <h2>チームの特徴</h2>
-      </div>
-      <div class="grid">
-        <div class="grid__item">
-          <h3>PHILOSOPHY</h3>
-          <p>「攻守で走り続ける」。高い運動量と意思決定スピードを軸に、チーム全員がアグレッシブなバスケを志向します。</p>
+      <section class="section">
+        <div class="section-header">
+          <p class="section-eyebrow">NEWS</p>
+          <h2>ニュース</h2>
+          <p>活動レポート・イベント情報などを随時更新しています。</p>
         </div>
-        <div class="grid__item">
-          <h3>PROGRAM</h3>
-          <p>週 2 回のチーム練習、パフォーマンスケア、映像セッションを一体化。社会人も参加しやすい時間割を組んでいます。</p>
-        </div>
-        <div class="grid__item">
-          <h3>SUPPORT</h3>
-          <p>学生スタッフがデータ解析・SNS 運用を担当。コート外での挑戦も歓迎し、キャリア形成を後押しします。</p>
-        </div>
-      </div>
-    </section>
+        <div id="latest-news" class="news-list"></div>
+        <p><a href="news.html">ニュース一覧へ →</a></p>
+      </section>
 
-    <section class="section" id="contact">
-      <div class="section__header">
-        <p class="section__eyebrow">CONTACT</p>
-        <h2>お問い合わせ・参加希望</h2>
-        <p>練習参加、スポンサー・コラボなどお気軽にご連絡ください。</p>
-      </div>
-      <form class="contact" name="contact" netlify>
-        <label>
-          お名前
-          <input type="text" name="name" placeholder="山田 太郎" required>
-        </label>
-        <label>
-          メールアドレス
-          <input type="email" name="email" placeholder="example@example.com" required>
-        </label>
-        <label>
-          お問い合わせ内容
-          <textarea name="message" rows="4" placeholder="参加希望、練習見学、スポンサー相談など" required></textarea>
-        </label>
-        <button type="submit" class="btn btn--primary">送信する</button>
-      </form>
-    </section>
+      <section class="section panel">
+        <div class="section-header">
+          <p class="section-eyebrow">FOLLOW US</p>
+          <h2>SNS</h2>
+          <p>最新情報は SNS で配信しています。フォローしてチームの様子をチェック。</p>
+        </div>
+        <div class="sns-links">
+          <a href="https://x.com/rampon_basketball" target="_blank" rel="noopener">X (旧Twitter)</a>
+          <a href="https://instagram.com/rampon_basketball" target="_blank" rel="noopener">Instagram</a>
+          <a href="https://youtube.com" target="_blank" rel="noopener">YouTube</a>
+        </div>
+      </section>
+    </div>
   </main>
 
-  <footer class="footer">
-    <p>© <span id="year"></span> Rampon Basketball Project</p>
-    <p class="footer__note">最新情報は SNS (@rampon_basketball) でも発信しています。</p>
+  <footer class="site-footer">
+    <div class="wrapper">
+      <p>© <span id="year"></span> Rampon Basketball Project</p>
+    </div>
   </footer>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+  <script src="assets/js/main.js" defer></script>
 </body>
 </html>
