Update team page with detailed RicoTai info

--- a/team.html
+++ b/team.html
@@ -28,25 +28,63 @@
       <section class="section">
         <div class="section-header">
           <p class="section-eyebrow">TEAM</p>
-          <h1>団体紹介</h1>
-          <p>Rampon Basketball Project は「走れる知性」をコンセプトにした大学発クラブ。学生の主体性と地域連携を両立する組織運営を実践しています。</p>
+          <h1>慶應理工学部體育會バスケットボール部</h1>
+          <p>通称「リコタイ」。創部82年を迎える歴史ある団体で、年3回開催される主要大会すべてでの優勝を目標に活動しています。所属学部に関わらず、慶應義塾大学の学生が参加可能です。</p>
+        </div>
+        <div class="panel">
+          <figure>
+            <img src="https://placehold.co/1100x500?text=Team+Photo" alt="慶應理工学部體育會バスケットボール部 集合写真">
+            <figcaption>集合写真（撮影日: 2024年12月）</figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <section class="section grid-two">
+        <article class="panel">
+          <h2>リコタイとは？</h2>
+          <p>「本気でバスケに向き合いながら、学業・留学・キャリア形成も両立する」ことを掲げた大学クラブ。サークルより競技志向、體育會より自由度の高い環境で、戦術理解と組織力を磨きます。</p>
+          <p>・主要大会：春季大会、夏季大会、冬季大会<br>・活動年数：82期（1943年創部）<br>・所属：慶應理工学部體育會（全学部から入部可能）</p>
+        </article>
+        <article class="panel">
+          <h2>どんな人に向いている？</h2>
+          <ul>
+            <li>大学でも本気でバスケットボールを続けたいが、體育會はハードルが高いと感じる人</li>
+            <li>ただのピックアップゲームではなく、戦術的なバスケを学びたい人</li>
+            <li>バスケ以外にも留学・研究・課外活動など幅広く挑戦したい人</li>
+            <li>イベント運営や地域連携にも興味がある人</li>
+          </ul>
+        </article>
+      </section>
+
+      <section class="section">
+        <div class="section-header">
+          <p class="section-eyebrow">MORE</p>
+          <h2>リコタイについてもっと知る</h2>
+          <p>活動内容や試合情報は以下のページからご覧いただけます。</p>
         </div>
         <div class="grid-two">
           <article class="panel">
-            <h3>PHILOSOPHY</h3>
-            <p>攻守のトランジションで優位を作るハイテンポバスケを標榜し、映像・データを元にした意思決定を大切にしています。</p>
+            <h3>活動スケジュール</h3>
+            <p>練習曜日・会場・変更連絡をまとめています。見学希望の方は事前にご確認ください。</p>
+            <a class="btn btn-ghost" href="schedule.html">Scheduleページへ</a>
           </article>
           <article class="panel">
-            <h3>PROGRAM</h3>
-            <p>週2回のチーム練習に加え、個別スキルワーク、コンディションチェック、メンタリングを組み合わせた独自の育成プログラム。</p>
+            <h3>試合結果</h3>
+            <p>年度別に試合結果とレポートを保存。直近の勝敗や得点差が一目でわかります。</p>
+            <a class="btn btn-ghost" href="games.html">Gamesページへ</a>
           </article>
           <article class="panel">
-            <h3>STAFF</h3>
-            <p>学生スタッフがアナリティクス・広報・イベント運営を担当。社会人アドバイザーによるメンタリングも受けられます。</p>
+            <h3>ニュース</h3>
+            <p>イベント案内や活動レポート、トライアウト情報など最新トピックスを発信。</p>
+            <a class="btn btn-ghost" href="news.html">Newsページへ</a>
           </article>
           <article class="panel">
-            <h3>COMMUNITY</h3>
-            <p>港区・渋谷区を中心とした地域連携イベントを定期開催。中高生向けクリニックや社会人勉強会も共催しています。</p>
+            <h3>SNS</h3>
+            <p>練習や試合の様子を写真・動画で更新しています。</p>
+            <div class="sns-links">
+              <a href="https://instagram.com/rampon_basketball" target="_blank" rel="noopener">Instagram</a>
+              <a href="https://x.com/rampon_basketball" target="_blank" rel="noopener">X (Twitter)</a>
+            </div>
           </article>
         </div>
       </section>
@@ -54,11 +92,16 @@
       <section class="section">
         <div class="section-header">
           <p class="section-eyebrow">JOIN</p>
-          <h2>入部/見学について</h2>
+          <h2>入部・見学のステップ</h2>
         </div>
         <div class="panel">
-          <p>・大学生（学年・大学不問）、社会人OBOGいずれも応募可<br>・バスケットボール経験3年以上推奨。サポートスタッフは未経験可<br>・まずは <a href="contact.html">Contact</a> または <a href="faq.html">FAQ</a> をご確認のうえご連絡ください。</p>
-          <p>次回トライアウトや練習会の情報は News / Schedule ページでお知らせします。</p>
+          <ol>
+            <li>FAQ を確認し、参加条件やよくある質問をチェック</li>
+            <li><a href="contact.html">Contact</a> より見学希望日や興味分野を送信</li>
+            <li>スタッフから日程連絡 → 練習またはイベントに参加</li>
+            <li>トライアウト（春/秋予定）で正式メンバー決定</li>
+          </ol>
+          <p>最新の募集状況やイベント情報は <a href="news.html">News</a> と SNS で告知します。</p>
         </div>
       </section>
     </div>
