Add annual RicoTai event calendar

--- a/schedule.html
+++ b/schedule.html
@@ -89,6 +89,71 @@
           <p>見学は事前連絡必須です。参加希望日は第3候補までご連絡ください。</p>
         </article>
       </section>
+
+      <section class="section">
+        <div class="section-header">
+          <p class="section-eyebrow">EVENTS</p>
+          <h2>リコタイの1年間</h2>
+          <p>主要イベントと大会スケジュールです（状況により変更の可能性あり）。</p>
+        </div>
+        <div class="table-scroll">
+          <table>
+            <thead>
+              <tr>
+                <th></th>
+                <th>1月</th>
+                <th>2月</th>
+                <th>3月</th>
+                <th>4月</th>
+                <th>5月</th>
+                <th>6月</th>
+                <th>7月</th>
+                <th>8月</th>
+                <th>9月</th>
+                <th>10月</th>
+                <th>11月</th>
+                <th>12月</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>行事</td>
+                <td>/</td>
+                <td>春季大会＆合宿</td>
+                <td>春季大会</td>
+                <td>新歓</td>
+                <td>/</td>
+                <td>夏季大会</td>
+                <td>夏季大会</td>
+                <td>マリン合宿</td>
+                <td>合宿</td>
+                <td>/</td>
+                <td>秋季大会</td>
+                <td>秋季大会</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
+
+      <section class="section grid-two">
+        <article class="panel">
+          <h3>春季大会 & 秋季大会</h3>
+          <p>春季はトーナメント形式で約16校が優勝を争います。秋季も同様に優勝をかけた大事なシリーズで、年間目標の中心です。</p>
+        </article>
+        <article class="panel">
+          <h3>夏季大会</h3>
+          <p>リーグ戦形式で1部〜4部に分かれて開催。リコタイは現在1部に所属し、埼玉工業大学・東京都市大学・東京理科大・芝浦工業大学・東洋大学などと対戦します。</p>
+        </article>
+        <article class="panel">
+          <h3>合宿</h3>
+          <p>4泊5日で行う戦術集中期間。映像や戦術ボードを使ってじっくりチームを作り込みます。夏は海を楽しむ「マリン合宿」も実施。</p>
+        </article>
+        <article class="panel">
+          <h3>その他イベント</h3>
+          <p>BBQ、ハロウィン、納会など交流イベントも多数。バスケへの集中とコミュニティの楽しさを両立できるよう企画しています。</p>
+        </article>
+      </section>
     </div>
   </main>
 
