Update basketball team information in index.html

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <section class="hero">
     <div class="wrapper">
       <div class="hero-text">
-        <p class="hero-eyebrow">UNIVERSITY BASKETBALL TEAM</p>
-        <h1>走れる知性を武器に。<br>都市型クラブの新しい形。</h1>
-        <p>Rampon Basketball Project は、学生・社会人混成で活動する大学発クラブ。競技・学業・キャリアを両立しながら、首都圏の大学バスケをアップデートします。</p>
+        <p class="hero-eyebrow">慶應理工学部體育會バスケットボール部</p>
+        <h1>遊びと本気の両立。<br>課外活動のの新しい形。</h1>
+        <p>慶應理工学部體育會バスケットボール部 は、年に3回開催される大会優勝を目標にして練習に取り組んでいる団体です。今年で86期目の歴史ある団体です。</p>
         <div class="hero-actions">
           <a class="btn btn-primary" href="schedule.html">練習/試合スケジュール</a>
           <a class="btn btn-ghost" href="contact.html">見学・入部相談</a>
@@ -44,17 +44,17 @@
         <div class="section-header">
           <p class="section-eyebrow">RESULT</p>
           <h2>直近の試合結果</h2>
-          <p>Games データから自動で最新3件を掲載。詳細ページでレポートを確認できます。</p>
+          <p>詳細はタブをクリック</p>
         </div>
         <div id="latest-games" class="games-list"></div>
-        <p><a href="games.html">全試合をみる →</a></p>
+        <p><a href="games.html">全試合結果をみる →</a></p>
       </section>
 
       <section class="section">
         <div class="section-header">
           <p class="section-eyebrow">NEWS</p>
           <h2>ニュース</h2>
-          <p>活動レポート・イベント情報などを随時更新しています。</p>
+          <p>試合結果や合宿報告、練習の様子などを随時更新しています。</p>
         </div>
         <div id="latest-news" class="news-list"></div>
         <p><a href="news.html">ニュース一覧へ →</a></p>
@@ -77,7 +77,7 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p>© <span id="year"></span> Rampon Basketball Project</p>
+      <p>© <span id="year"></span> Keio Tech Basketball </p>
     </div>
   </footer>
   <script>
