Update brand name in game.html

--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
 <body data-page="game-detail">
   <header class="site-header">
     <nav class="navbar">
-      <a class="brand" href="index.html">Rampon Basketball</a>
+      <a class="brand" href="index.html">Keio Basketball Tech</a>
       <button class="nav-toggle" aria-label="メニューを開く">MENU</button>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
