Retitle site and copyright to Keio Basketball Tech

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rampon Basketball Project | Official</title>
-  <meta name="description" content="大学バスケットボールチーム Rampon Basketball Project の公式サイト。団体紹介、活動スケジュール、試合結果、ニュース、FAQ、問い合わせ情報を掲載。">
+  <title>Keio Basketball Tech | Official</title>
+  <meta name="description" content="大学バスケットボールチーム Keio Basketball Tech の公式サイト。団体紹介、活動スケジュール、試合結果、ニュース、FAQ、問い合わせ情報を掲載。">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body data-page="home">
   <header class="site-header">
     <nav class="navbar">
-      <a class="brand" href="index.html">Rampon Basketball</a>
+      <a class="brand" href="index.html">Keio Basketball Tech</a>
       <button class="nav-toggle" aria-label="メニューを開く">MENU</button>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
@@ -28,8 +28,8 @@
     <div class="wrapper">
       <div class="hero-text">
         <p class="hero-eyebrow">慶應理工学部體育會バスケットボール部</p>
-        <h1>遊びと本気の両立。<br>課外活動のの新しい形。</h1>
-        <p>慶應理工学部體育會バスケットボール部 は、年に3回開催される大会優勝を目標にして練習に取り組んでいる団体です。今年で86期目の歴史ある団体です。</p>
+        <h1>遊びと本気の両立。<br>課外活動の新しい形。</h1>
+        <p>慶應理工学部體育會バスケットボール部（Keio Basketball Tech）は、年に3回開催される大会優勝を目標にして練習に取り組んでいる歴史ある団体です。</p>
         <div class="hero-actions">
           <a class="btn btn-primary" href="schedule.html">練習/試合スケジュール</a>
           <a class="btn btn-ghost" href="contact.html">見学・入部相談</a>
@@ -77,7 +77,7 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p>© <span id="year"></span> Keio Tech Basketball </p>
+      <p>© <span id="year"></span> Keio Basketball Tech</p>
     </div>
   </footer>
   <script>
