--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Game Detail | Rampon Basketball Project</title>
+  <title>Game Detail | Keio Basketball Tech</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body data-page="game-detail">
@@ -39,7 +39,7 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p>© <span id="year"></span> Rampon Basketball Project</p>
+      <p>© <span id="year"></span> Keio Basketball Tech</p>
     </div>
   </footer>
   <script>
