--- a/news-article.html
+++ b/news-article.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>News Detail | Rampon Basketball Project</title>
+  <title>News Detail | Keio Basketball Tech</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body data-page="news-detail">
   <header class="site-header">
     <nav class="navbar">
-      <a class="brand" href="index.html">Rampon Basketball</a>
+      <a class="brand" href="index.html">Keio Basketball Tech</a>
       <button class="nav-toggle" aria-label="メニューを開く">MENU</button>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
@@ -35,7 +35,7 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p>© <span id="year"></span> Rampon Basketball Project</p>
+      <p>© <span id="year"></span> Keio Basketball Tech</p>
     </div>
   </footer>
   <script>
